force-app/main/default/objects/Hazard__c/Hazard__c.object-meta.xml
<CustomObject>
    <label>Hazard</label>
    <pluralLabel>Hazards</pluralLabel>
    <nameField>
        <label>Hazard Number</label>
        <type>AutoNumber</type>
        <displayFormat>HAZ-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Hazards reported during field work, linked to a Work Order.</description>
</CustomObject>