force-app/main/default/objects/Hazard__c/fields/Reported_At__c.field-meta.xml
<CustomField>
    <fullName>Reported_At__c</fullName>
    <label>Reported At</label>
    <type>DateTime</type>
    <description>Timestamp when the hazard was reported.</description>
</CustomField>