force-app/main/default/objects/Hazard__c/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <label>Reported By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>ReportedHazards</relationshipName>
    <relationshipLabel>Reported Hazards</relationshipLabel>
    <description>The user who reported this hazard.</description>
</CustomField>