force-app/main/default/objects/Hazard__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <label>Work Order</label>
    <type>MasterDetail</type>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipName>Hazards</relationshipName>
    <relationshipLabel>Hazards</relationshipLabel>
    <relationshipOrder>0</relationshipOrder>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
    <description>Parent Work Order for this hazard report.</description>
</CustomField>